[workspace]
resolver = "2"
members = [
    "eterm",
    "eterm_viewer",
]

[workspace.dependencies]
egui = { git = "https://github.com/emilk/egui", branch = "master", features = ["serde"] }
egui_glium = { git = "https://github.com/emilk/egui", branch = "master" }
egui_demo_lib = { git = "https://github.com/emilk/egui", branch = "master", features = ["serde"] }
glium = "0.32"


