[package]
name = "eterm"
version = "0.0.1"
edition = "2021"
rust-version = "1.56"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Visual terminal for egui"
homepage = "https://github.com/emilk/eterm"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/emilk/egui"
categories = ["gui"]
keywords = ["gui", "egui", "terminal", "thin client"]
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true

[lib]

[dependencies]
egui = {workspace = true}
anyhow = "1"
bincode = "1.3"
itertools = "0.10"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
zstd = "0.11"

[dev-dependencies]
egui_demo_lib = {workspace = true}
chrono = "0.4"
tracing-subscriber = "0.3"
